HTML Report: Added expand all and collapse all buttons (fixes #37)

--- a/jgiven-core/src/main/resources/com/tngtech/jgiven/report/html/default.css
+++ b/jgiven-core/src/main/resources/com/tngtech/jgiven/report/html/default.css
@@ -298,6 +298,11 @@ h1 {
   padding: 20px;
 }
 
+#expand-all-icon, #collapse-all-icon {
+  cursor: pointer;
+  float: right;
+}
+
 #content > ul {
   list-style-type: none;
   padding-left:0px;
